--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Henrique Souza</title>
-</head>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type='text/css' href="css/estilos.css"
+    </head>
 <body>
     <header>
         <nav class="menu">
